tests/parser/fail/03-temporal-match-missing-arrow.nx
fn brokenMatch() {
    match temporal state {
        at checkpoint "validation" with errors > 0
    }
}
